--- a/src/app/admin/settings/branches-setting/update-branch/update-branch.component.html
+++ b/src/app/admin/settings/branches-setting/update-branch/update-branch.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (submit)="saveBranch($event)">
-    
+
     <div class="add_formWrapper">
         <div class="row">
             <div class="col-sm-auto order-md-12">
@@ -52,7 +52,7 @@
                             <input type="text" formControlName="taxPercent" matInput>
                         </mat-form-field>
                     </div>
-                    
+
                     <div class="col-12">
                         <mat-form-field appearance="fill" class="w-100">
                             <mat-label>Description</mat-label>
@@ -68,7 +68,7 @@
                 Kitchen Setup
                 <button mat-stroked-button color="primary" type="button" (click)="addAnotherKitchen()">+ Add</button>
             </h3>
-    
+
             <div formArrayName="kitchens">
                 <ng-container *ngFor="let item of kitchens['controls'];let i=index;">
                     <div class="row align-items-center" *ngIf="!item.get('deletedFlag').value" [formGroupName]="i">
@@ -91,7 +91,7 @@
                 Order Type Setup
                 <button mat-stroked-button color="primary" type="button" (click)="addAnotherOrderType()">+ Add</button>
             </h3>
-    
+
             <div formArrayName="orderTypes">
                 <ng-container *ngFor="let item of orderTypes['controls'];let i=index;">
                     <div class="row align-items-center" *ngIf="!item.get('deletedFlag').value" [formGroupName]="i">
@@ -121,7 +121,7 @@
                 Payment Method Setup
                 <button mat-stroked-button color="primary" type="button" (click)="addAnotherPaymentMethod()">+ Add</button>
             </h3>
-    
+
             <div formArrayName="paymentMethods">
                 <ng-container *ngFor="let item of paymentMethods['controls'];let i=index;">
                     <div class="row align-items-center" *ngIf="!item.get('deletedFlag').value" [formGroupName]="i">
@@ -148,10 +148,10 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="button_wrapper">
-            <button mat-raised-button color="primary" class="mr-20">{{ (branchId)?'Update':'Add'}}</button>
-            <button mat-raised-button color="warn">Cancel</button>
+            <button mat-raised-button color="primary" class="mr-20" type="submit">{{ (branchId)?'Update':'Add'}}</button>
+            <button mat-raised-button color="warn" type="button">Cancel</button>
         </div>
     </div>
 </form>
