--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -53,9 +53,9 @@
                                 <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                             </button>
                             <mat-menu #moreOption="matMenu">
-                                <button mat-menu-item type="button" [routerLink]="['/admin/user/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
-                                <button mat-menu-item type="button" (click)="deleteUser(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">Delete</button>
-                                <button mat-menu-item type="button" (click)="changeOtherUserPassword(item)"><img src="assets/images/icons/SETTINGS.svg" alt="" class="icon_img">Change Password</button>
+                                <button mat-menu-item type="button" [routerLink]="['/admin/user/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img mr-3"> Edit</button>
+                                <button mat-menu-item type="button" (click)="deleteUser(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img mr-3">Delete</button>
+                                <button mat-menu-item type="button" (click)="changeOtherUserPassword(item)"><img src="assets/images/icons/SETTINGS.svg" alt="" class="icon_img mr-3">Change Password</button>
                             </mat-menu>
                         </td>
                         <td>
